# xp_backend

./: .env  Cargo.toml  README.md
src/: app_config.rs  app_error.rs  macros.rs  main.rs  session.rs  utils.rs
src/api/middlewares/: mod.rs  require_auth.rs
src/api/routes/: mod.rs  signin.rs  signup.rs  users.rs
src/db/: db.rs
src/db/models/: user.rs
