[package]
name = "xp_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
actix-utils = "3.0.1"
thiserror = "1.0.63"
env_logger = "0.11.5"
lettre = "0.11.7"
once_cell = "1.19.0"
argon2 = "0.5.3"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
log = "0.4.22"
actix-cors = "0.7.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
actix-identity = "0.7.1"
actix-web = "4.8.0"
serde_json = "1.0.120"
surrealdb = "1.5.4"
totp-rs = "5.6.0"
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.12.5"
base32 = "0.5.1"
chrono = "0.4.38"
tokio = { version = "1.39", features = ["full"] }